create portfolio web content home, about and education

--- a/pages/home.html
+++ b/pages/home.html
@@ -16,7 +16,8 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body bgcolor="B39DF6">
+  <!-- <body bgcolor="B39DF6"> -->
+  <body>
     <header>
       <table bgcolor="97E5EB" style="width: 100%; border: none">
         <tr>
@@ -26,9 +27,9 @@
           <td>
             <table>
               <tr>
-                <td><a href="/pages/home.html">Home</a>&emsp;&emsp;&emsp;</td>
-                <td><a href="">About</a>&emsp;&emsp;&emsp;</td>
-                <td><a href="">Resume</a>&emsp;&emsp;&emsp;</td>
+                <td><a href="#home">Home</a>&emsp;&emsp;&emsp;</td>
+                <td><a href="#about">About</a>&emsp;&emsp;&emsp;</td>
+                <td><a href="#education">Resume</a>&emsp;&emsp;&emsp;</td>
                 <td><a href="">Skills</a>&emsp;&emsp;&emsp;</td>
                 <td><a href="">Projects</a>&emsp;&emsp;&emsp;</td>
                 <td><a href="">Contact</a>&emsp;</td>
@@ -40,7 +41,7 @@
     </header>
 
     <main>
-      <section>
+      <section id="home">
         <br /><br />
         <h1>Hello!</h1>
         <h2>I'm <span style="color: mediumblue">Tharindu Shehan</span></h2>
@@ -63,73 +64,198 @@
           connect and collaborate on your next project!
         </p>
         <br />
-      </section>
-    </main>
 
-    <footer>
-      <section>
         <p>You can find me on below platforms :</p>
         <br />
-        <a
-          href="https://www.linkedin.com/in/tharindu-shehan-734366346/"
-          target="_blank"
-          ><i
-            style="width: 40px; height: 20px"
-            class="fa-brands fa-linkedin"
-          ></i
-        ></a>
-        <a href="https://github.com/ERTShehan" target="_blank"
-          ><i style="width: 40px; height: 20px" class="fa-brands fa-github"></i
-        ></a>
+        <nav>
+          <a
+            href="https://www.linkedin.com/in/tharindu-shehan-734366346/"
+            target="_blank"
+            ><i
+              style="width: 40px; height: 20px"
+              class="fa-brands fa-linkedin"
+            ></i
+          ></a>
+          <a href="https://github.com/ERTShehan" target="_blank"
+            ><i
+              style="width: 40px; height: 20px"
+              class="fa-brands fa-github"
+            ></i
+          ></a>
+        </nav>
+        <br /><br />
       </section>
-    </footer>
-  </body>
-</html>
 
-<!-- <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home page</title>
-  </head>
-  <body>
-    <header>
-      <table>
-        <tr>
-          <td>
-            <h2>ShehaN</h2>
-          </td>
-          <td>
-            <table>
-              <tr>
-                <td><a href="">Home</a></td>
-                <td><a href="">About</a></td>
-                <td><a href="">Resume</a></td>
-                <td><a href="">Skills</a></td>
-                <td><a href="">Projects</a></td>
-                <td><a href="">Contact</a></td>
-              </tr>
-            </table>
-          </td>
-        </tr>
-      </table>
-    </header>
+      <section id="section2">
+        <table cellspacing="40" cellpading="60">
+          <tr>
+            <th>20 <br />Awards</th>
+            <th>02 <br />Complete Projects</th>
+            <th>02 <br />Happy Customers</th>
+          </tr>
+        </table>
+      </section>
 
-    <main>
+      <section id="about">
+        <header>
+          <h1 align="center">About me</h1>
+        </header>
+        <p>
+          I am an undergraduate student pursuing a degree in Software
+          Engineering. I have a strong foundation in programming with
+          proficiency in Java and MySQL database management. Additionally, I am
+          skilled in web development technologies such as HTML, CSS, and
+          JavaScript, enabling me to build dynamic and responsive websites.
+        </p>
+
+        <p>
+          I am also experienced with various software tools, including the
+          Microsoft Office suite, Photoshop for graphic design, Figma for UI/UX
+          design, and Audacity for audio editing. With a diverse skill set
+          across both development and creative tools, I am passionate about
+          learning and improving my abilities in the field of software
+          engineering.
+        </p>
+
+        <ul>
+          <li><b>Name:</b> Tharindu Shehan</li>
+          <li><b>Date of birth: </b>December 19, 2002</li>
+          <li><b>Address: </b>Akuressa, Matara</li>
+          <li><b>Email: </b>ertsshehan@gmail.com</li>
+          <li><b>Phone: </b>+94 788720585</li>
+        </ul>
+        <br /><br />
+      </section>
+
+      <section id="education">
+        <header>
+          <h1 align="center">Education</h1>
+        </header>
+
+        <table border="0" width="100%">
+          <tr>
+            <td align="left">
+              <table border="1" style="border-collapse: collapse">
+                <tr>
+                  <td>
+                    Studied at St. Thomas’ <br />College. Matara <br />2014 -
+                    2022 <br /><br />
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    I completed my education at St. <br />
+                    Thomas' College, Matara, from <br />
+                    2014 to 2022, where I gained a <br />
+                    strong academic foundation and <br />
+                    developed valuable life skills.
+                    <br /><br /><br /><br /><br /><br /><br />
+                    <img
+                      src="C:\Users\Shehan\Visual Studio code\Portfolio Shehan\assets\images\St.thomasmatara.jpg"
+                      alt="St.Thomas' college"
+                      style="width: 70px; height: 70px"
+                    />
+                  </td>
+                </tr>
+              </table>
+            </td>
+
+            <td align="center">
+              <table border="1" style="border-collapse: collapse">
+                <tr>
+                  <td>
+                    Diploma in Information and <br />
+                    Communication Technology <br />2022 - 2023 <br /><br />
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    I completed my Diploma in <br />
+                    Information and Communication <br />
+                    Technology at Esoft Metro <br />
+                    Campus, where I gained practical <br />
+                    knowledge and skills in IT <br />systems, networking, and
+                    digital <br />
+                    communication. <br /><br /><br /><br /><br />
+                    <img
+                      src="C:\Users\Shehan\Visual Studio code\Portfolio Shehan\assets\images\Esoft-Logo.webp"
+                      alt="Esoft-Logo"
+                      style="width: 70px; height: 70px"
+                    />
+                  </td>
+                </tr>
+              </table>
+            </td>
+
+            <td align="right">
+              <table border="1" style="border-collapse: collapse">
+                <tr>
+                  <td>
+                    Graduate Diploma in <br />
+                    Software Engineering <br />2024 <br /><br />
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    I am currently pursuing my <br />
+                    Graduate Diploma in Software <br />
+                    Engineering at the Institute of <br />
+                    Software Engineering (IJSE). As <br />
+                    an undergraduate, I am acquiring <br />
+                    in-depth knowledge in software <br />
+                    development, programming, <br />
+                    system design, and application <br />
+                    development, equipping me with <br />
+                    the skills necessary to excel in the <br />
+                    software engineering field. <br /><br />
+                    <img
+                      src="C:\Users\Shehan\Visual Studio code\Portfolio Shehan\assets\images\Ijse-Logo.png"
+                      alt="Ijse-Logo"
+                      style="width: 70px; height: 70px"
+                    />
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+        </table>
+        <br />
+
+        <table border="1" style="border-collapse: collapse">
+          <tr>
+            <td><h4>What I do</h4></td>
+          </tr>
+          <tr>
+            <td>
+              As a developer, coder, and UI/UX designer, I <br />
+              craft intuitive designs and build robust <br />
+              applications, blending creativity with technical <br />
+              expertise to deliver seamless user experiences.
+            </td>
+          </tr>
+        </table>
+        <br /><br />
+
+        <table border="1" style="border-collapse: collapse">
+          <tr>
+            <td><h4>Experience</h4></td>
+          </tr>
+          <tr>
+            <td>
+              As a developer, coder, and UI/UX designer, I <br />
+              create seamless user experiences through <br />intuitive designs
+              and robust applications. Let’s <br />collaborate on your next
+              project!
+            </td>
+          </tr>
+        </table>
+      </section>
+
       <section>
-        <h1>Hello!</h1>
-        <h2>I'm Tharindu Shehan</h2>
-        <h2>a <strong>developer.</strong></h2>
-        <blockquote>
-          I’m Tharindu Shehan, a passionate developer, coder, and UI/UX
-          designer. With a strong focus on creating seamless and engaging user
-          experiences, I specialize in crafting intuitive designs and building
-          robust applications. Explore my work to see how I combine creativity
-          with technical expertise to bring innovative ideas to life. Let's
-          connect and collaborate on your next project!
-        </blockquote>
+        <header>
+          <h1 align="center">Professional Skills</h1>
+        </header>
       </section>
     </main>
   </body>
-</html> -->
+</html>
