Remove table and modify some code(Add complete web page)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home page</title>
+    <title>Tharindu Shehan</title>
     <link
       href="https://fonts.cdnfonts.com/css/jsmath-cmmi10"
       rel="stylesheet"
@@ -19,39 +19,30 @@
   <!-- <body bgcolor="B39DF6"> -->
   <body>
     <header>
-      <table bgcolor="97E5EB" style="width: 100%; border: none">
-        <tr>
-          <td>
-            <h2 style="font-family: jsmath-cmmi10; margin: 0">ShehaN</h2>
-          </td>
-          <td>
-            <table>
-              <tr>
-                <td><a href="#home">Home</a>&emsp;&emsp;&emsp;</td>
-                <td><a href="#about">About</a>&emsp;&emsp;&emsp;</td>
-                <td><a href="#education">Resume</a>&emsp;&emsp;&emsp;</td>
-                <td><a href="#skills">Skills</a>&emsp;&emsp;&emsp;</td>
-                <td><a href="#project">Projects</a>&emsp;&emsp;&emsp;</td>
-                <td><a href="">Contact</a>&emsp;</td>
-              </tr>
-            </table>
-          </td>
-        </tr>
-      </table>
+      <div>
+        <h2 style="font-family: jsmath-cmmi10; margin: 0">ShehaN</h2>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#education">Resume</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#project">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
       <section id="home">
         <br /><br />
         <h1>Hello!</h1>
-        <h2>I'm <span style="color: mediumblue">Tharindu Shehan</span></h2>
-        <h2>
-          a <strong><span style="color: darkblue">developer.</span></strong
-          ><br />
-        </h2>
+        <h2>I'm Tharindu Shehan</h2>
+        <h2>a developer.<br /></h2>
 
         <img
-          src="C:\Users\Shehan\Visual Studio code\Portfolio Shehan\assets\images\Profile Photo.webp"
+          src="/assets/images/Profile Photo.webp"
           alt="Profile photo"
           style="width: 300px; object-fit: cover"
         />
@@ -87,13 +78,11 @@
       </section>
 
       <section id="section2">
-        <table cellspacing="40" cellpading="60">
-          <tr>
-            <th>20 <br />Awards</th>
-            <th>02 <br />Complete Projects</th>
-            <th>02 <br />Happy Customers</th>
-          </tr>
-        </table>
+        <div>
+          <p>20 <br />Awards</p>
+          <p>02 <br />Complete Projects</p>
+          <p>02 <br />Happy Customers</p>
+        </div>
       </section>
 
       <section id="about">
@@ -132,160 +121,125 @@
           <h1 align="center">Education</h1>
         </header>
 
-        <table border="0" width="100%">
-          <tr>
-            <td align="left">
-              <table border="1" style="border-collapse: collapse">
-                <tr>
-                  <td>
-                    Studied at St. Thomas’ <br />College. Matara <br />2014 -
-                    2022 <br /><br />
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    I completed my education at St. <br />
-                    Thomas' College, Matara, from <br />
-                    2014 to 2022, where I gained a <br />
-                    strong academic foundation and <br />
-                    developed valuable life skills.
-                    <br /><br /><br /><br /><br /><br /><br />
-                    <img
-                      src="C:\Users\Shehan\Visual Studio code\Portfolio Shehan\assets\images\St.thomasmatara.jpg"
-                      alt="St.Thomas' college"
-                      style="width: 70px; height: 70px"
-                    />
-                  </td>
-                </tr>
-              </table>
-            </td>
+        <div>
+          <div>
+            <strong
+              ><p>Studied at St. Thomas’ College. Matara 2014 - 2022</p></strong
+            >
+            <p>
+              I completed my education at St. Thomas' College, Matara, from 2014
+              to 2022, where I gained a strong academic foundation and developed
+              valuable life skills.
+            </p>
+            <img
+              src="/assets/images/St.thomasmatara.jpg"
+              alt="St.Thomas' college"
+              style="width: 70px; height: 70px"
+            />
+          </div>
 
-            <td align="center">
-              <table border="1" style="border-collapse: collapse">
-                <tr>
-                  <td>
-                    Diploma in Information and <br />
-                    Communication Technology <br />2022 - 2023 <br /><br />
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    I completed my Diploma in <br />
-                    Information and Communication <br />
-                    Technology at Esoft Metro <br />
-                    Campus, where I gained practical <br />
-                    knowledge and skills in IT <br />systems, networking, and
-                    digital <br />
-                    communication. <br /><br /><br /><br /><br />
-                    <img
-                      src="C:\Users\Shehan\Visual Studio code\Portfolio Shehan\assets\images\Esoft-Logo.webp"
-                      alt="Esoft-Logo"
-                      style="width: 70px; height: 70px"
-                    />
-                  </td>
-                </tr>
-              </table>
-            </td>
+          <div>
+            <p>
+              <b>
+                Diploma in Information and Communication Technology 2022 - 2023
+              </b>
+            </p>
+            <p>
+              I completed my Diploma in Information and Communication Technology
+              at Esoft Metro Campus, where I gained practical knowledge and
+              skills in IT systems, networking, and digital communication.
+            </p>
+            <img
+              src="/assets/images/Esoft-Logo.webp"
+              alt="Esoft-Logo"
+              style="width: 70px; height: 70px"
+            />
+          </div>
 
-            <td align="right">
-              <table border="1" style="border-collapse: collapse">
-                <tr>
-                  <td>
-                    Graduate Diploma in <br />
-                    Software Engineering <br />2024 <br /><br />
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    I am currently pursuing my <br />
-                    Graduate Diploma in Software <br />
-                    Engineering at the Institute of <br />
-                    Software Engineering (IJSE). As <br />
-                    an undergraduate, I am acquiring <br />
-                    in-depth knowledge in software <br />
-                    development, programming, <br />
-                    system design, and application <br />
-                    development, equipping me with <br />
-                    the skills necessary to excel in the <br />
-                    software engineering field. <br /><br />
-                    <img
-                      src="C:\Users\Shehan\Visual Studio code\Portfolio Shehan\assets\images\Ijse-Logo.png"
-                      alt="Ijse-Logo"
-                      style="width: 70px; height: 70px"
-                    />
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-        </table>
-        <br />
+          <div>
+            <p><b>Graduate Diploma in Software Engineering 2024</b></p>
+            <p>
+              I am currently pursuing my Graduate Diploma in Software
+              Engineering at the Institute of Software Engineering (IJSE). As an
+              undergraduate, I am acquiring in-depth knowledge in software
+              development, programming, system design, and application
+              development, equipping me with the skills necessary to excel in
+              the software engineering field.
+            </p>
+            <img
+              src="/assets/images/Ijse-Logo.png"
+              alt="Ijse-Logo"
+              style="width: 70px; height: 70px"
+            />
+          </div>
+        </div>
 
-        <table border="1" style="border-collapse: collapse">
-          <tr>
-            <td><h4>What I do</h4></td>
-          </tr>
-          <tr>
-            <td>
-              As a developer, coder, and UI/UX designer, I <br />
-              craft intuitive designs and build robust <br />
-              applications, blending creativity with technical <br />
-              expertise to deliver seamless user experiences.
-            </td>
-          </tr>
-        </table>
+        <div>
+          <p><strong>What I do</strong></p>
+          <p>
+            As a developer, coder, and UI/UX designer, I craft intuitive designs
+            and build robust applications, blending creativity with technical
+            expertise to deliver seamless user experiences.
+          </p>
+        </div>
         <br /><br />
 
-        <table border="1" style="border-collapse: collapse">
-          <tr>
-            <td><h4>Experience</h4></td>
-          </tr>
-          <tr>
-            <td>
-              As a developer, coder, and UI/UX designer, I <br />
-              create seamless user experiences through <br />intuitive designs
-              and robust applications. Let’s <br />collaborate on your next
-              project!
-            </td>
-          </tr>
-        </table>
+        <div>
+          <p><strong>Experience</strong></p>
+          <p>
+            As a developer, coder, and UI/UX designer, I create seamless user
+            experiences through intuitive designs and robust applications. Let’s
+            collaborate on your next project!
+          </p>
+        </div>
       </section>
 
       <section id="skills">
         <header>
           <h1 align="center">Professional Skills</h1>
         </header>
-        <hr />
+        <div>
+          <p>Java 90 %</p>
+          <p>JavaScript 50 %</p>
+          <p>MySQL 95 %</p>
+          <p>HTML 60 %</p>
+          <p>Microsoft Office 95 %</p>
+          <p>CSS 70 %</p>
+          <hr />
+        </div>
+        <img src="/assets/images/javaIcon.png" alt="Java" />
+        <img src="/assets/images/MySQL Icon.png" alt="MySQL" />
+        <img src="/assets/images/HTML Icon.png" alt="HTML" />
+        <img src="/assets/images/CSS Icon.png" alt="CSS" />
+        <img src="/assets/images/Figma Icon.png" alt="Figma" />
+        <img src="/assets/images/Nodejs Icon.png" alt="nodejs" />
+        <img src="/assets/images/JavaScript Icon.png" alt="JavaScript" />
       </section>
 
       <section id="project">
         <header>
-          <h1 align="center"><span style="color: cyan">My</span> Projects</h1>
+          <h1>My Projects</h1>
           <br />
         </header>
 
         <h3><p align="center">Construction company management System</p></h3>
         <p>
           The Construction Company Management System is a standalone software
-          <br />
-          solution designed to streamline the management of construction <br />
+          solution designed to streamline the management of construction
           projects, resources, and expenses. The system features a user-friendly
-          <br />
           dashboard that provides quick access to critical data, including
-          <br />
           project details, client management, employee information, supplier
-          <br />
           tracking, and financial summaries.
         </p>
 
         <img
-          src="C:\Users\Shehan\Visual Studio code\Portfolio Shehan\assets\images\BuildmasterLoginpage.png"
+          src="/assets/images/BuildmasterLoginpage.png"
           alt="BuidMaster Login Page"
           style="width: 400px; height: 250px"
-        />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        />
 
         <img
-          src="C:\Users\Shehan\Visual Studio code\Portfolio Shehan\assets\images\BuildmasterDashboard.png"
+          src="/assets/images/BuildmasterDashboard.png"
           alt="BuidMaster Login Page"
           style="width: 400px; height: 250px"
         />
@@ -293,20 +247,20 @@
         <br />
 
         <img
-          src="C:\Users\Shehan\Visual Studio code\Portfolio Shehan\assets\images\BuildmasterExpenses.png"
+          src="/assets/images/BuildmasterExpenses.png"
           alt="BuidMaster Login Page"
           style="width: 400px; height: 250px"
         />
         <br /><br /><br />
 
         <img
-          src="C:\Users\Shehan\Visual Studio code\Portfolio Shehan\assets\images\ProjectPhoto1.png"
+          src="/assets/images/ProjectPhoto1.png "
           alt="BuidMaster Login Page"
           style="width: 400px; height: 250px"
-        />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        />
 
         <img
-          src="C:\Users\Shehan\Visual Studio code\Portfolio Shehan\assets\images\ProjectPhoto2.jpg"
+          src="/assets/images/ProjectPhoto2.jpg"
           alt="BuidMaster Login Page"
           style="width: 400px; height: 250px"
         />
@@ -322,88 +276,103 @@
           ><p>Contact if you have any questions</p></span
         >
 
-        <table class="center">
-          <tr>
-            <td>
-              <img
-                src="C:\Users\Shehan\Visual Studio code\Portfolio Shehan\assets\images\AddressIcon.png"
-                alt="Address"
-              />
-              <br />
-              <b>ADDRESS</b> <br />
-              Akuressa, Matara, Sri Lanka
-            </td>
+        <div>
+          <div>
+            <img src="/assets/images/AddressIcon.png" alt="Address" />
+            <br />
+            <b>ADDRESS</b> <br />
+            Akuressa, Matara, Sri Lanka
+          </div>
 
-            <td>
-              <img
-                src="C:\Users\Shehan\Visual Studio code\Portfolio Shehan\assets\images\Contact Icon.png"
-                alt="Contact"
-              />
-              <br />
-              <b>CONTACT NUMBER</b> <br />
-              +94 788720585
-            </td>
+          <div>
+            <img src="/assets/images/Contact Icon.png" alt="Contact" />
+            <br />
+            <b>CONTACT NUMBER</b> <br />
+            +94 788720585
+          </div>
 
-            <td>
-              <img
-                src="C:\Users\Shehan\Visual Studio code\Portfolio Shehan\assets\images\Email Icon.png"
-                alt="Email"
-              />
-              <br />
-              <b>EMAIL</b> <br />
-              ertsshehan@gmail.com
-            </td>
+          <div>
+            <img src="/assets/images/Email Icon.png" alt="Email" />
+            <br />
+            <b>EMAIL</b> <br />
+            ertsshehan@gmail.com
+          </div>
 
-            <td>
-              <img
-                src="C:\Users\Shehan\Visual Studio code\Portfolio Shehan\assets\images\Website Icon.png"
-                alt="Website"
-              />
-              <br />
-              <b>WEBSITE</b> <br />
-            </td>
-          </tr>
-        </table>
+          <div>
+            <img src="/assets/images/Website Icon.png" alt="Website" />
+            <br />
+            <b>WEBSITE</b> <br />
+          </div>
+        </div>
         <br /><br />
 
-        <table>
-          <tr>
-            <td rowspan="5">
-              <img
-                src="C:\Users\Shehan\Visual Studio code\Portfolio Shehan\assets\images\contactme.png"
-                alt="Contact me"
-              />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            </td>
-            <td><input type="text" placeholder="Your Name" /></td>
-          </tr>
-
-          <tr>
-            <td><input type="text" placeholder="Your Email" /></td>
-          </tr>
-
-          <tr>
-            <td><input type="text" placeholder="Subject" /></td>
-          </tr>
-
-          <tr>
-            <td>
-              <textarea
-                name="message"
-                id="message"
-                placeholder="Message"
-                rows="5"
-                cols="50"
-              ></textarea>
-            </td>
-          </tr>
-
-          <tr>
-            <td><button type="button">SEND MESSAGE</button></td>
-          </tr>
-        </table>
+        <div>
+          <div>
+            <img src="/assets/images/contactme.png" alt="Contact me" />
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          </div>
+          <div><input type="text" placeholder="Your Name" /></div>
+          <div><input type="text" placeholder="Your Email" /></div>
+          <div><input type="text" placeholder="Subject" /></div>
+          <div>
+            <textarea
+              name="message"
+              id="message"
+              placeholder="Message"
+              rows="5"
+              cols="50"
+            ></textarea>
+          </div>
+          <div><button type="button">SEND MESSAGE</button></div>
+        </div>
+        <hr />
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <section id="footer">
+        <h3>About</h3>
+        <p>
+          I’m passionate about crafting intuitive, engaging user experiences and
+          building robust, user-centric applications. With a strong focus on
+          design and development, I bring creative ideas to life with both
+          technical expertise and aesthetic vision. Let's connect and
+          collaborate on your next project!
+        </p>
+
+        <nav>
+          <a
+            href="https://www.linkedin.com/in/tharindu-shehan-734366346/"
+            target="_blank"
+            ><i
+              style="width: 40px; height: 20px"
+              class="fa-brands fa-linkedin"
+            ></i
+          ></a>
+          <a href="https://github.com/ERTShehan" target="_blank"
+            ><i
+              style="width: 40px; height: 20px"
+              class="fa-brands fa-github"
+            ></i
+          ></a>
+        </nav>
+
+        <h3>Have a Questions</h3>
+        <p>
+          <img src="/assets/images/location-Icon.png" alt="location" />
+          Akuressa, Matara, Sri Lanka
+        </p>
+        <p>
+          <img src="/assets/images/call-Icon.png" alt="Call" />+94 788720585
+        </p>
+        <p>
+          <img src="/assets/images/email-Icon.png" alt="" />ertsshehan@gmail.com
+        </p>
+        <br />
+        <p align="center">
+          Copyright 2025 All rights reserved. | Tharindu Shehan
+        </p>
+      </section>
+    </footer>
   </body>
 </html>
