Modify index.html file and host site

--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tharindu Shehan</title>
+    <title>Tharindu Shehan's personal Portfolio</title>
+    <meta
+      name="description"
+      content="This is the homepage of the Tharindu Shehan"
+    />
+    <meta
+      name="keywords"
+      content="HTML, CSS, html, JavaScript, JS, ShehaN, portfolio, web developer, software developer, TShehan, Tharindu, Shehan, Tharindu Shehan, ShehaN.com, shehan.com"
+    />
     <link
       href="https://fonts.cdnfonts.com/css/jsmath-cmmi10"
       rel="stylesheet"
@@ -370,7 +378,7 @@
         </p>
         <br />
         <p align="center">
-          Copyright 2025 All rights reserved. | Tharindu Shehan
+          Copyright &copy;2025 All rights reserved. | Tharindu Shehan
         </p>
       </section>
     </footer>
